<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/horse_page_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/horse"
            android:scaleType="fitStart"
            android:src="@drawable/horce_arabik" />

        <TextView
            android:id="@+id/horse_page_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breed" />

        <TextView
            android:id="@+id/horse_page_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country" />

        <TextView
            android:id="@+id/horse_page_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <TextView
            android:id="@+id/horse_page_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />


    </LinearLayout>

</ScrollView>